--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ java {
 }
 
 minecraft {
+    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
     // The mappings can be changed at any time and must be in the following format.
     // Channel:   Version:
     // snapshot   YYYYMMDD   Snapshot are built nightly.
@@ -142,7 +143,7 @@ dependencies {
     // For more info...
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
-    implementation fg.deobf('software.bernie.geckolib:geckolib-forge-1.16.5:3.0.77')
+    implementation fg.deobf('software.bernie.geckolib:geckolib-forge-1.16.5:3.0.81')
 }
 
 // Example for how to get properties into the manifest for reading at runtime.
